--- a/public/test_post.html
+++ b/public/test_post.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     
@@ -14,7 +14,7 @@
 
 <p>with an image for good measure</p>
 
-<p><img src="media/under_construction.png" alt="under construction" title="" /></p>
+<p><img src="../media/under_construction.png" alt="under construction" title="" /></p>
 </body>
 </html>
 
