how its made n that

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@ unnecessary endeavour, I wanted to create something fun purely for the sake of i
 
 <h2>posts</h2>
 <a href="test_post.html">test_post</a>
+<a href="how_its_made.html">how_its_made</a>
 </body>
 </html>
 
