suppress build output on make

--- a/public/how_its_made.html
+++ b/public/how_its_made.html
@@ -40,7 +40,7 @@
 <pre><code>rm public/links.html
 </code></pre>
 
-<p>In this project, I cleverly constructed the index page by combining generated hyperlinks markup with a generic header and footer. These partials proved to be invaluable, as I reused them while building the pages for each content file.</p>
+<p>In this project, I constructed the index page by combining generated hyperlinks markup with a generic header and footer. These partials proved to be invaluable, as I reused them while building the pages for each content file.</p>
 
 <p>Subsequently, I tackled the task of converting the content files from Markdown to HTML format. To accomplish this, I designed a straightforward script that focused on achieving three primary goals:</p>
 
